tidying start of c1

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -181,70 +181,46 @@ area of contradition explores the use of software tool use and their expansion b
 
 ### C1 - contradictions involving the use of game programming and asset authoring tools
 
-This section addresses  difficulties in getting the mechanics of coding underway and outlines evolution in tool use between P2 and P2.
+In this section, I draw on journal notes to describe emerging tensions in the activity of kickstarting participant coding activity and the subsequent evolution in tool use between P1 and P2. A key motivation driving my initial interaction with participants was to facilitate an inclusive environment to explore the process of making games. To do this, in P1 I used several open, non-coding processes to scaffold a game design process. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game story scenarios, tinkering with pixel-art character making, making craft collages for game backgrounds. I also lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes. As scenes and characters began to emerge we then discussed what game features they would like to add to their games in terms of what their characters should be able to _do_ on screen. It was only in week five of P1 that that I introduced the coding tools and processes. This delay was driven, in part, by my hesitation to intoduce computer coding too early in the process, as I expected tensions between the need of participants to use code and code authoring software to create games and their limited skills and experience in using them. This area was further complicated by my own motivations for working with open source, authentic text language, in the from of JavaScript.
 
-There are a million ways to start a conversation. There are probably a million ways to getting the process of designing and making a game using of code underway as well. This section outlines an initial set of design decisions and describes some of the tensions and subsequent evolutions in learning tool (more varied? and cultural?) use between P1 and P2. The choice of which tensions to address stem form the changes to the learning design, tracing back through design journals and session reflection notes to trace the rationale driving the changes.  
+My previous research had explored the use of interactive, personal media creating using webpage languages of HTML, css and JavaScript [@chesterman_webmaking_2015]. I was keen to explore the potential of game authoring within a similar environment. As such, I drew on the documentation of the Mozilla community and selected Phaser as a JavaScript game making framework and Mozilla Thimble as a code playground (concepts explored in the literature review). A fuller technical break down of the tools used in each phase is omitted as it interupts the flow of this narrative but it included as Appendix 5.tech.
 
- My main goals for the initial interaction with participants was to create an inclusive environment to explore the process of making games. To do this, in P1 I used several open design activities and ongoing processes to support the game design of participants. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game features to add and environmental story, tinkering with pixel-art character making, making craft collages for game backgrounds. I also lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes.
+While the use of a code playground simplified this the process of publishing and editing, The need to use a text coding processes to enact game changes began to create a set of accululating tensions.
 
-<!-- But this aspect was promising but lacked a structured exploration in sessions in a way which conveyed the limits of what our projects could achieve technically. -->
+Firstly there was a gulf between the changes participants imagined and their inability to enact them which cause frustration at times. To address this, groups began to specialise with some taking on the process of coding while others worked on graphical game assets (both digital and physical), others planning narratives and gameplay features, some working on sound elements. However, at times participant expectations exceeded a realistc scope for the game making project, a tension explored in more details in Appendix 5.bee
 
-<!-- This is partly as I did not want to start with code that might alienate, but also as my own game coding skills were also being tested to their limits at this point also and I was working hard to introduce coding at a suitable level. -->
+Additionally, the informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction. My initial feeling about this aspect was supported by experiences in P1 documented in my journal. An  attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.
 
-<!-- While activity theory has a broad definition of the concept of tool which would include the use of language, concepts, supporting resources and production processes, this section focuses on software tools and code framework used to create games in this program.  -->
-
-
-<!--
-I had experience of teaching web coding but limited knowledge of how to code games.
-
-Thus during these five week that time I had been teaching myself the basics following my own repertoires and practices as a mostly self-taught coder. -->
-
-It was only in week five of P1 that that I introduced the coding tools and processes. My own motivations for working with open source, authentic game authoring tools (explored in the introduction), steered me to use a JavaScript as a coding language within online webpages, a complex technical process involving several interacting languages and processes (see appendix 5.x for a break down). Given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them.
-
-This section focuses on a key area of contradiction, namely a gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. This section outlines different dimentions of this area of conflict in line with CHAT principles, and progresses to a technical analysis of the tools introduced to address them.
-
-<!--
-Introduction and draw on the documentation of the Mozilla community and select Phaser as a framework. -->
-
-<!-- The use of a code playground simplified this the process of publishing and editing (see LR).    -->
-
-<!-- In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. -->
-<!-- At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. -->
-
-**an uncomfortable shift**
-
-
-**desire to avoid instruction**
-
-My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
-
-The informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction.
-
-Work needed to be done to address participant expectations of an acceptable scope for the game making project .
 
 **input of parents as organisers**
 
-As the process entered a coding stage, there were many creatively processes happening simultaneously. For example some working on graphical game assets, others planning narrative, some working on sound elements and other engaging with coding. I became overwhelmed dealing with group processes as I lacked a clear plan on how to integrate these disparate elements to pull the projects together. Reviewing my notes and email interactions from this time, I note a key exchange between my self and participants after one session where I share my feeling of being overwhelmed in sessions and asking parents for support in organising and bringing more order to group and planning processes.
+As the sessions continued, with many creatively processes happening simultaneously, and without a clear plan on how to integrate these disparate elements to pull the projects together, I became overwhelmed dealing by the group dynamics and technical demands on my time. Reviewing my notes and email interactions from this time, I note a key exchange between my self and participants after one session where I share my feeling of being out of my depth. In this email (in P1 extended design narrative) and asking parents for support in organising and bringing more order to group and planning processes.
 
-<!-- My expectation that participants would follow their own interests and as a facilitator I would help groups pull projects together. -->
+<!-- "It was a bit of a hard session for me on Wednesday as I was a bit low on confidence about how to pull all of your creativity into a finished game! It started to feel like a bit of a fantasy!" -->
 
-A crisis point developed (despite the input of parents) to help an organisational process.
+<!-- A crisis point developed (despite the input of parents) to help an organisational process. While participants were being supported to develop assets in the form or game characters and ideas for features were being documented via lists, participants  did not have a working either a working knowledge of the tools used, or a process to start to build that knowledge. My own process of self research and informed tinkering drew on years of experience and was therefore not suitable as participants did not share those coding repertoires or familiarity with coding tools. While the suggested tools were theoretically available to the participants online, they were therefore stuck nevertheless.  -->
 
-While participants were being supported to develop assets in the form or game characters and ideas for features were being documented via lists, participants  did not have a working either a working knowledge of the tools used, or a process to start to build that knowledge. My own process of self research and informed tinkering drew on years of experience and was therefore not suitable as participants did not share those coding repertoires or familiarity with coding tools. While the suggested tools were theoretically available to the participants online, they were therefore stuck nevertheless. In terms of a representation in a activity system, we can express this as a developing tension between the tools available to the participants and their objective of actualising their ideas and graphical assets in code form.
+In terms of a representation in a activity system, we can express this as a developing tension between the tools available to the participants and their objective of actualising their ideas and graphical assets in code form.
 
 ![tensions with tools](./Pictures/At_tension_1_v1.png){width=95%}
 
-In response to my email, parents made suggestions from parents in P1 include: use of a visible and shared list of game features that are being worked on, their requirements, graphical elements needed to inplement them; and more hands on use of tools before beginning the planning process.
+In response to my email, parents made suggestions from parents in P1 include: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements, and more hands on use of tools before beginning the planning process. To address the last point, I worked with groups to help them adapt a game template from phaser tutorial and input their own graphics to at least create a static prototype / sketch of the game.
 
-I began to increasingly draw on the organisational abilities of parents and tenacity of young people involved rather than structured educational support for the design process (drawing more on a community activist approach rather than teaching). See appendix 5.x for a fuller outline of P1 process and feedback.
+The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups creating wish lists of game features and requested support to implement them. I gave this help directly coding with participants and which if I thought the process would be useful to other groups I created a help sheet for that feature. However, there were still a significant technical and organisation issues on which I continued to reflect on in P1 and after the completion in D1.
 
-#### Summary of challenge caused by contradictions in a nutshell
+<!-- **Summary of design challenge**
 
-The wider  design challenge involved designing a bespoke  game making toolset, coding tools, supporting documentation and seed activities to encourage appropriate learning and peer support practices. A starting toolset was needed to start this process.  It should rather than  inventing a simplified code language or inauthentic novice oriented tool, adapt authentic web technologies and make them an accessible by embedding affordances within them to facilitate participants to address gaps in their knowledge without needing explicit instruction.
-This is covered in the remainder of C1 section.
+The wider design challenge involved designing a bespoke game making toolset, coding tools, supporting documentation and seed activities to encourage appropriate learning and peer support practices. -->
+<!-- A starting toolset was needed to start this process.  It should rather than  inventing a simplified code language or inauthentic novice oriented tool,  -->
 
-Additionally, the aspect of supporting documentation should, like whole class instruction, not interfere with the flow of participants experience, and aspect addressed in C2
-The aspect of flow in one of several factors that I propose have an impact on the positive affect towards to the object being worked on. These factors, namely alienation from culture of coding and varied approaches to foster varied game making styles are addressed in C3  
+The use of a starting template had been vital, and feedback directed several improvements.  
+- the overall learning design should maintain  positive affect towards to the object being worked on but engage in realistic coding early on
+- the template should help novices with embedding affordances which helped participants build code familiarity  without needing explicit instruction.
+- supporting documentation should, like whole class instruction, not interfere with the flow of participants experience,
+
+
+**Shift from P1 - P2**
+See appendix 5.x for a fuller outline of P1 process and feedback.
 
 
 <!-- This challenge was brought sharply into focus by a particular conflict experienced by one family in particular. -->
@@ -257,9 +233,6 @@ The aspect of flow in one of several factors that I propose have an impact on th
 
 <!-- NOTE - PERHAPS EXPLORE COMPLEXITIY OF IDES AS A BARRIER IN RESEARCH - SEE BLUE JAY AND GREEN FOOT TRAINING IDEs -->
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
-
-
-
 
 
 #### Using a starter game template within a code playground
@@ -287,8 +260,7 @@ The choice to pre-select a particular genre was initially a pragmatic response t
 
 I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online starter templates from several sources to create a minimal template for a two-dimensional platformer game.
 
-Thus in a period of development see D1 Fig 5.x  By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game. and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. This took the technical form of a webpage with the coding of game done using a JavaScript file drawing on a JavaScript library called phaser.
-
+Thus in a period of development see D1 Fig 5.x  By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game. and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game.
 
 In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
 
