--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -203,22 +203,18 @@ In terms of a representation in a activity system, we can express this as a deve
 
 In response to my email, parents made suggestions from parents in P1 include: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements, and more hands on use of tools before beginning the planning process. To address the last point, I worked with groups to help them adapt a game template from phaser tutorial and input their own graphics to at least create a static prototype / sketch of the game.
 
-The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups creating wish lists of game features and requested support to implement them. I gave this help directly coding with participants and which if I thought the process would be useful to other groups I created a help sheet for that feature. However, there were still a significant technical and organisation issues on which I continued to reflect on in P1 and after the completion in D1.
+The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups creating wish lists of game features and requested support to implement them. I gave this help directly coding with participants and which if I thought the process would be useful to other groups I created a help sheet for that feature which built on the suggested template. However, by this point so many tools and had been introduced that the process also seemed overwhelming for participants, a feeling which is relfected in participant feedack for P1 in in Appendix 5.P1.feedback and in particular Vignette in Appendix 5.bee. As an example, when offering feedback to address her family's feeling of isolation from the coding process, the parent of the family had requested more hands on play and use of the tools of production before being called on to make creative decisions.
+
 
 <!-- **Summary of design challenge**
 
-The wider design challenge involved designing a bespoke game making toolset, coding tools, supporting documentation and seed activities to encourage appropriate learning and peer support practices. -->
+ -->
 <!-- A starting toolset was needed to start this process.  It should rather than  inventing a simplified code language or inauthentic novice oriented tool,  -->
+On completion of P1, I reflected on the design challenge involved to address several areas contradictions that had emerged in my journal observations and participant feedback.
 
-The use of a starting template had been vital, and feedback directed several improvements.  
-- the overall learning design should maintain  positive affect towards to the object being worked on but engage in realistic coding early on
-- the template should help novices with embedding affordances which helped participants build code familiarity  without needing explicit instruction.
-- supporting documentation should, like whole class instruction, not interfere with the flow of participants experience,
+The overall learning design should maintain  positive affect towards to the object being worked on but engage in hands-on coding using authentic tools early in the process to avoid unlrealistic expectations. The template should help novices with embedding affordances which helped participants build code familiarity without needing explicit instruction. Supporting documentation was needed but should not interfere with the flow of participants experience. Finally, the overall learning design should encourage appropriate social learning, peer support and relfective practices but again without overly complicating the object of actitivty or interupting the flow participant making.
 
-
-**Shift from P1 - P2**
-See appendix 5.x for a fuller outline of P1 process and feedback.
-
+Three sections of this chapter describe different facets of these contraditions and interventions to address them. This, the first, tackles key transformations in use of primary tools, those used to directly achieve the task. The second addresses the area of help resources, documentation. Finally other support process to support emerging social coding processes are examined.
 
 <!-- This challenge was brought sharply into focus by a particular conflict experienced by one family in particular. -->
 <!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
@@ -234,30 +230,23 @@ See appendix 5.x for a fuller outline of P1 process and feedback.
 
 #### Using a starter game template within a code playground
 
-The following section describes key transformations in use of primary tools. In this study I use the term primary tools to be those used to directly achieve the task and other tool use in the form of help resources, documentation and other support processes as secondary tools. Specifically this section covers the transformation in constitution and use of code and asset authoring tools and a starting game code template.
+Addressing the evolution in design and use of code and asset authoring tools, while the code playground and the code template within in it are two separate tools, from the perspective of the learner, they were experienced jointly. As such, I cover them together in this section.
 
-While the code playground and the code template within in it are two separate tools, from the perspective of the learner, they were experienced jointly. As such, I cover them together in this section.
+<!-- **Code playground.** -->
 
+The initial use of a code playground and starting template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015]. Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users on complete or partial code projects or problems. They are used primarily for web-based project involving the technologies of HTML, css and variations of JavaScript (for more detail see Appendix 5.tech).  
 
-**Code playground.**
+The use of code playgrounds by novices can mitigate against some of the initial challenges provided by learning computer coding stemming from  unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. Tactics to mitigated against challenging elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
 
-The initial use of a code playground and starting template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015].
+In D1 I proactively reached out to Mozilla to ask about the future of Thimple, my choice of codeplayground, and was informed that it would soon be _sunsetted_ (discontinued) due to end of funding. Their suggested replacement Gitch.com had a wider user base (beyond educators) and similar functionality.    
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. The use of code playgrounds by novices can mitigate against some of the complexities of code environments. Tricky elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
+<!-- **Starting template** -->
 
-**Starting template**
+As I moved to Glitch.com I also redesigned the starting code template of a game of the  _platformer_ genre (see glossary). To do this a draw on three online tutorials site and made key changes to make the code more readable to novices, and the structure easier to patch code snippts. The design decisions driving this process is outlined in Appendix 5.tech. The choice to pre-select a particular genre was a pragmatic response to tensions of being overwhelmed by help requests and thus narrowing the range of game features that would be requested. Additionally, to encourage  playful, hands-on experimentation in early stages, a working game template rather purely structural template would be optimal.
 
-I adapted a starting code template of a platform game from a tutorial site and adding it to the code playground as a base project to remix from.
+UP TO HERE 
 
-This mirrors my own autodiadactic coding process.
-
-This template was synthesised from several tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game.
-
-The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in appendix 5.a had requested more hands on play and use of the tools of production before being called on to make creative decisions.
-
-I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online starter templates from several sources to create a minimal template for a two-dimensional platformer game.
-
-Thus in a period of development see D1 Fig 5.x  By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game. and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game.
+By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game. and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game.
 
 In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
 
@@ -289,19 +278,6 @@ phaser consists of several interlinked files of Javascript, HTML and CSS and ima
 
 While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js .
 
-<!-- Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023]. Phaser starting templates available from the website share this aim of providing scaffolding by providing a downloadable zip of files which when extracted are already interlinked correctly [^5].
-While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js .
-
-Game states and functions to create the game loop (see glossary) are included natively in the phaser framework [@faas_introduction_2017]. Game states allow designers to deconstruct games and game code into collections of sub-units (states)   [@kostolny_digital_2017]. For example a simple arcade games may only had an insert coin state, a play state and a game over state. A game coding framework like phaser shields its users from code complexity by providing a game state manager and associated functions out-of-the-box, meaning that lots of underlying code is already written and hidden from view. To increase simplicity for my participants the starting template I created had only one game state called _PlayState_. It followed the following structure: a beginning section out side of a function declaring variables; a preload function which loads assets into the game; a create function which sets up the initial game; an update function which listens to and responds to user input. The following illustration from the step-based instructions illustrates the structure for participants, including the possibility to create new game states e.g. a game over state.
-
-![](./Pictures/overview_of_structure_cropped.png){width=55%}
-
-4.x - Game states and function structure explained in the Glitch Game Makers manual created for for P2 and P3 -->
-
-<!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
-
-<!-- Other parents requested additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach.  -->
-<!-- In addition, my own motivations to explore research claims which on the engagement value of prioritising modifications to for quick impact on the game and on allowing participants choose over what they wanted to add to their game next. -->
 
 <!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
 
